force-app/main/default/objects/FIN_Payment_Type_Channel__c/FIN_Payment_Type_Channel__c.object-meta.xml
<CustomObject>
    <label>Payment Type Channel</label>
    <nameField>
        <label>Payment Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Type Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>