force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Box_Office__c.field-meta.xml
<CustomField>
    <fullName>FIN_Box_Office__c</fullName>
    <label>Box Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Payment_Type</valueSetName>
    </valueSet>
</CustomField>