force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>FIN_Call_Center__c</fullName>
    <label>Call Center</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Payment_Type</valueSetName>
    </valueSet>
</CustomField>