force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Context__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Payment Type Channels</relationshipLabel>
    <relationshipName>Payment_Type_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>