force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Payment Type Channels</relationshipLabel>
    <relationshipName>Payment_Type_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>