force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Merchant_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account</label>
    <referenceTo>FIN_Merchant_Account__c</referenceTo>
    <relationshipLabel>Payment Type Channels (Merchant Account)</relationshipLabel>
    <relationshipName>Payment_Type_Channels</relationshipName>
    <type>Lookup</type>
</CustomField>