force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/FIN_Web__c.field-meta.xml
<CustomField>
    <fullName>FIN_Web__c</fullName>
    <label>Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Payment_Type</valueSetName>
    </valueSet>
</CustomField>