force-app/main/default/objects/FIN_Payment_Type_Channel__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>DI</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>AXS CBNL</fullName>
            </value>
            <value>
                <fullName>AXS Internal</fullName>
            </value>
            <value>
                <fullName>AXS RDTC</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>(Over)/Short</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>ApplePay</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Goldstar API</fullName>
            </value>
            <value>
                <fullName>Groupon API</fullName>
            </value>
            <value>
                <fullName>Klarna Amex Checkout</fullName>
            </value>
            <value>
                <fullName>Klarna Checkout</fullName>
            </value>
            <value>
                <fullName>Moneris</fullName>
            </value>
            <value>
                <fullName>Premium Credit</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Rewards4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>