force-app/main/default/objects/FIN_Payment_Type_Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Context__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>